syntax = "proto3";

package common;

message Timestamp {
  int64 seconds = 1;
  uint32 nanos = 2;
}

message Address {
  string bech32 = 1;
}

message Uuid {
  uint64 most_significant = 1;
  uint64 least_significant = 2;
}