syntax = "proto3";

package manifest;
import "protos/common.proto";

message Manifest {
  common.Address address = 1;
  common.Timestamp created = 2;
  common.Timestamp last_modified = 3;
  string name = 4;
  optional string description = 5;
  repeated Vault vaults = 25;
}

message Vault {
  common.Uuid id = 1;
  common.Timestamp created = 2;
  common.Timestamp last_modified = 3;
  string name = 4;
  optional string description = 5;
  bool active = 6;
}